# CPPLabs

./: .gitignore  CMakeLists.txt  test.cpp
lab_12/: CMakeLists.txt
lab_12/libs/SFML/Frameworks/lib/: libsfml-graphics-d.2.5.dylib  libsfml-graphics.2.5.dylib  libsfml-network-d.2.5.1.dylib  libsfml-network.2.5.1.dylib  libsfml-system-d.2.5.1.dylib  libsfml-window-d.2.5.1.dylib  libsfml-window.2.5.1.dylib
lab_12/libs/SFML/Frameworks/sfml-audio.framework/: sfml-audio
lab_12/libs/SFML/Frameworks/sfml-graphics.framework/Versions/2.5.1/: sfml-graphics
lab_12/src/: main.cpp
lab_12/src/MyText/: AnimatedText.h
lab_12/src/RenderLoop/: RenderLoop.h
lab_12/src/WindowManager/: WindowManager.h
lab_4/: docs  (+3 more)
sfml/: CMakeLists.txt  conanfile.txt
sfml/.cmake/api/v1/reply/: cache-v2-969943701c72ae2f9191.json  cmakeFiles-v1-e60641945a9a261e3e6a.json  codemodel-v2-049a534ab9f6fd88b303.json  index-2022-12-17T22-14-46-0553.json  target-KuramotoModel-Debug-225f4a4e37f364ec946a.json
sfml/lib/: libsfml-audio.dylib  libsfml-graphics-d.2.5.1.dylib  libsfml-network-d.2.5.dylib
sfml/libs/SFML/Frameworks/lib/: libsfml-audio-d.2.5.1.dylib  libsfml-audio-d.dylib  libsfml-audio.dylib  libsfml-graphics.dylib  libsfml-network.2.5.dylib  libsfml-system.2.5.dylib  libsfml-window-d.2.5.dylib  libsfml-window.dylib
sfml/libs/SFML/Frameworks/sfml-network.framework/: sfml-network
sfml/src/: main.cpp
sfml/src/Body/: Body.cpp  Body.h
sfml/src/Body/CircleBody/: CircleBody.cpp  CircleBody.h
sfml/src/GameLoop/: GameLoop.cpp  GameLoop.h
sfml/src/GameLoop/PhysicsObject/: PhysicsObject.h
sfml/src/GameLoop/PhysicsObject/Figure/: Figure.h
sfml/src/GameLoop/ScieneManager/: ScieneManager.h
sfml/src/RenderLoop/: RenderLoop.h
sfml/src/WindowManager/: WindowManager.cpp  WindowManager.h
(+39 files in other folders)
