cmake_minimum_required(VERSION 3.23)
project(CPP_labs)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab1 lab_1/lab_1.cpp)
add_executable(lab3 lab_3/lab_3.cpp)
add_executable(lab3lul lab_3/lab_3_withot_array_wtf_fucking_trash.cpp)
add_executable(lab4.1 lab_4/lab_4.1.cpp)
add_executable(lab4.2 lab_4/lab_4.2.cpp)

